# ribbit

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
ribbit/: Cargo.toml  README.md  README.tpl
ribbit-derive/: Cargo.toml  README.md
ribbit-derive/src/: error.rs  gen.rs  get.rs  input.rs  ir.rs  leaf.rs  lib.rs  lift.rs  new.rs  repr.rs  set.rs  trait.rs  ty.rs  type.rs
ribbit-derive/src/leaf/: arbitrary.rs  native.rs
ribbit-derive/src/repr/: arbitrary.rs  leaf.rs  native.rs  node.rs
ribbit-derive/src/ty/: arbitrary.rs  leaf.rs  loose.rs  native.rs  node.rs  tight.rs
ribbit-derive/src/type/: arbitrary.rs  loose.rs  tight.rs
ribbit/src/: atomic.rs  lib.rs
ribbit/tests/: atomic.rs  bool.rs  compose.rs  debug.rs  enum.rs  generic.rs  loose.rs  non_zero.rs  struct.rs  tuple.rs  ui.rs  zst.rs
ribbit/tests/ui/: arbitrary_nonzero.rs  arbitrary_nonzero.stderr  mismatch_nonzero.rs  mismatch_nonzero.stderr  mismatch_size.rs  mismatch_size.stderr  mismatch_size_field.rs  mismatch_size_field.stderr  opaque_size.rs  opaque_size.stderr  overflow_explicit.rs  overflow_explicit.stderr  overflow_implicit.rs  overflow_implicit.stderr  struct_non_zero.stderr  struct_nonzero.rs  struct_nonzero.stderr  unsupported_type.rs  unsupported_type.stderr  variant_non_zero.rs  variant_non_zero.stderr  variant_nonzero.rs  variant_nonzero.stderr
