[package]
name = "ribbit-derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
darling = "0.20"
heck = "0.5"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", default-features = false, features = ["derive", "extra-traits", "parsing", "printing", "proc-macro"] }
