[package]
name = "ribbit-derive"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
darling = "0.23.0"
heck = "0.5.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", default-features = false, features = ["derive", "parsing", "proc-macro"] }
