[package]
name = "ribbit"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
atomic = []
atomic-u128 = ["atomic", "dep:portable-atomic", "portable-atomic/require-cas"]

[dependencies]
arbitrary-int = "2.1.1"
portable-atomic = { version = "1.13.0", optional = true, default-features = false }
ribbit-derive = { path = "../ribbit-derive" }

[dev-dependencies]
trybuild = "1.0.114"
