[package]
name = "ribbit"
version = "0.2.1"
edition = "2021"
description = "Derive macro for bit fields"
repository = "https://github.com/nwtnni/ribbit"
license = "MIT OR Apache-2.0"
keywords = ["bitfield"]
categories = ["data-structures", "no-std"]

[features]
atomic = []
u128 = []
atomic-u128 = ["atomic", "u128", "dep:portable-atomic", "portable-atomic/require-cas", "portable-atomic/fallback"]

[dependencies]
arbitrary-int = "2.1.1"
portable-atomic = { version = "1.13.0", optional = true, default-features = false }
ribbit-derive = { path = "../ribbit-derive", version = "0.1.0" }

[dev-dependencies]
trybuild = "1.0.114"

# https://users.rust-lang.org/t/how-to-publish-a-crate-with-docs-that-depends-on-features/29711/7
# https://docs.rs/about/metadata
[package.metadata.docs.rs]
all-features = true
